Fix urlrequest move for same document navigation case

Fix a dcheck that is hit due to url request added to the data use recorder
before removing it from the old data use recorder

Bug: 782385
Change-Id: I0618013ee648ca10acb9501ec0a4414f7a804143
Reviewed-on: https://chromium-review.googlesource.com/757778
Reviewed-by: Tarun Bansal <tbansal@chromium.org>
Commit-Queue: rajendrant <rajendrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514684}
Former-commit-id: 47cbf8de6899390eaac9f41f50ccea8c9bc766ad