chrome/browser/data_use_measurement/chrome_data_use_ascriber_unittest.cc
@@ -393,9 +393,39 @@ TEST_F(ChromeDataUseAscriberTest, SubResourceRequestsAfterNavigationFinish) {
   EXPECT_EQ(100, page_load_a_recorder.data_use().total_bytes_received());
   EXPECT_EQ(200, page_load_b_recorder.data_use().total_bytes_received());
 
+  std::unique_ptr<net::URLRequest> page_load_c_mainresource =
+      CreateNewRequest("http://test_c.com", true, kRequestId + 2,
+                       kRenderProcessId, kRenderFrameId);
+  std::unique_ptr<net::URLRequest> page_load_c_subresource =
+      CreateNewRequest("http://test_c.com/subresource", false, kRequestId + 3,
+                       kRenderProcessId, kRenderFrameId);
+
+  // Third page load 'c' on the same main render frame with
+  // same_document_navigation set.
+  ascriber()->OnBeforeUrlRequest(page_load_c_mainresource.get());
+  ascriber()->DidStartMainFrameNavigation(GURL("http://test_c.com"),
+                                          kRenderProcessId, kRenderFrameId,
+                                          kNavigationHandle);
+  ascriber()->ReadyToCommitMainFrameNavigation(
+      content::GlobalRequestID(kRenderProcessId, 0), kRenderProcessId,
+      kRenderFrameId);
+  ascriber()->DidFinishMainFrameNavigation(
+      kRenderProcessId, kRenderFrameId, GURL("http://mobile.test_c.com"), true,
+      kPageTransition, base::TimeTicks::Now());
+
+  ascriber()->OnBeforeUrlRequest(page_load_c_subresource.get());
+  ascriber()->OnNetworkBytesReceived(page_load_c_subresource.get(), 2000);
+  ascriber()->OnNetworkBytesReceived(page_load_b_subresource.get(), 1000);
+
+  // Data usage of page load 'c' should get merged to page load 'b'.
+  EXPECT_EQ(100, page_load_a_recorder.data_use().total_bytes_received());
+  EXPECT_EQ(3200, page_load_b_recorder.data_use().total_bytes_received());
+
   ascriber()->OnUrlRequestDestroyed(page_load_a_subresource.get());
   ascriber()->OnUrlRequestDestroyed(page_load_b_subresource.get());
   ascriber()->OnUrlRequestDestroyed(page_load_b_mainresource.get());
+  ascriber()->OnUrlRequestDestroyed(page_load_c_subresource.get());
+  ascriber()->OnUrlRequestDestroyed(page_load_c_mainresource.get());
   ascriber()->RenderFrameDeleted(kRenderProcessId, kRenderFrameId, -1, -1);
   EXPECT_EQ(0u, recorders().size());
 }
